# voyager

./: .clang-format  .clangd  .envrc  .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  ci_skip_rules.json  codegen.mk  codegen_networks.py  env.sh  environment.yml  mb_networks.py  minotaur_torture.sh  requirements.txt  run_regression.py  run_tests.py  run_tests_e2e.py  whitelist.json
data/: README.md  onesfull.pkl.REMOVED.git-id  pkl_parser.py  randfull.pkl.REMOVED.git-id  resnet8.pkl.REMOVED.git-id
doc/: ide_setup.md
models/: README.md  fp_models.py  fp_run.py  vision_models.py
pytorch/: bn_folding.py  resnet18_gen.py  run.py
scripts/: Accelerator.tcl  InputController.tcl  MatrixProcessor.tcl  MaxpoolUnit.tcl  OutputAddressGenerator.tcl  ProcessingElement.tcl  VectorFetchUnit.tcl  VectorOpUnit.tcl  VectorUnit.tcl  WeightController.tcl  architecture.tcl  common.tcl  hls.tcl  main.tcl
src/: AccelTypes.h  Accelerator.cc  Accelerator.h  AcceleratorWrapper.cc  AcceleratorWrapper.h  ApproximationConstants.h  ApproximationUnit.h  ArchitectureParams.h  CFloat.h  ConditionalConnections.h  DataTypes.h  DoubleBuffer.h  DualPortBuffer.h  DualPortDoubleBuffer.h  DwCUnit.h  FloatTypes.h  InputController.h  InputScaleController.h  IntTypes.h  MatrixProcessor.h  MatrixProcessor2.h  MatrixUnit.h  MatrixVectorUnit.h  MatrixVectorUnit2.h  MaxpoolUnit.h  MulAddTree.h  NormalFloat.h  (+24 more)
utils/hls-tidy-plugin/: CMakeLists.txt  CatapultHlsTidyModule.cc  ConnectionsResetCheck.cc  ConnectionsResetCheck.h  NestedUnrollCheck.cc  NestedUnrollCheck.h  environment.yml
(+305 files in other folders)
